# funhanzi

./: .dockerignore  .env.example  .gitignore  AGENT.md  Dockerfile  QWEN.md  README.md  gunicorn.conf.py  pyproject.toml  run.py  studies.md  test_selection_unit.py  test_words_gen_unit.py  words.txt
cli/: GEMINI.md  ai.py  exam_formatter.py  exam_read_random.py  exam_record.py  exam_write_random_words.py  find_words.py  main.py  study_chars.py  test_find_words.py  words.py  words_db.py
openspec/: project.md
openspec/specs/lessons/: spec.md
scripts/: run_test_server.sh
src/: manage.py
src/funhanzi/: asgi.py  local_settings.py  settings.py  urls.py  views.py  wsgi.py
src/studies/: admin.py  apps.py  models.py  urls.py  views.py
src/studies/logic/: __init__.py  ai.py  fsrs.py  logic.py  selection.py  sentence_gen.py  stats.py  study_ch_en_matching.py  study_char_word.py  study_cloze.py  study_find_words.py  word_population.py  words_gen.py
src/studies/migrations/: 0001_initial.py  0002_lesson.py  0003_remove_examsettings_lessons.py  0004_book_alter_lesson_options_lesson_id_and_more.py  (+4 more)
test_data/: test_data.json
webapp/: ai.py  app.py  db.py  formatter.py  formatter_char_word.py  formatter_cloze.py  formatter_exam.py  formatter_find_words.py  fsrs_logic.py  logic.py  selection.py  stats.py  study_char_word.py  study_cloze.py  study_exam_write.py  study_find_words.py  test_fsrs_logic.py  test_study_cloze.py  words.py  words_db.py  words_gen.py
webapp/templates/: admin.html  exam.html  layout.html  progress.html  record_exam.html  stats.html  study.html
(+35 files in other folders)
