[project]
name = "siwu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "google-generativeai>=0.8.5",
    "python-dotenv>=1.1.1",
    "fsrs>=4.2.0",
    "beautifulsoup4>=4.12.3",
    "google-genai>=1.46.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.3",
]

[tool.ruff.lint]
extend-select = ["B"]
